refactor : change class name, remove count field in WinningInformation