@@ -14,16 +14,16 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.ArgumentsProvider;
 import org.junit.jupiter.params.provider.ArgumentsSource;
 
-class WinningStatusTest {
+class WinningInformationTest {
     static class GetYieldSourceProvider implements ArgumentsProvider {
         @Override
         public Stream<? extends Arguments> provideArguments(ExtensionContext context) {
             return Stream.of(
                     //당첨 정보, 구입한 로또 개수, 예상 반환 결과를 공금한다.
-                    Arguments.of(Collections.emptyList(), 1, new BigDecimal("0.0")),
-                    Arguments.of(List.of(Winning.THREE), 8, new BigDecimal("62.5")),
-                    Arguments.of(List.of(Winning.THREE), 5, new BigDecimal("100.0")),
-                    Arguments.of(List.of(Winning.SIX), 2, new BigDecimal("1.0E+8"))
+                    Arguments.of(Collections.emptyList(), 1,  0.0),
+                    Arguments.of(List.of(Winning.THREE), 8,  62.5),
+                    Arguments.of(List.of(Winning.THREE), 5,  100.0),
+                    Arguments.of(List.of(Winning.SIX), 2,  1.0E+8)
             );
         }
     }
@@ -34,10 +34,10 @@ class WinningStatusTest {
         @ParameterizedTest
         @ArgumentsSource(GetYieldSourceProvider.class)
         @DisplayName("호출되면 당첨금과 구입 금액간의 수익률을 반환한다.")
-        void willReturnYield(List<Winning> winnings, int count, BigDecimal expect) {
-            WinningStatus winningStatus = new WinningStatus(winnings, count);
+        void willReturnYield(List<Winning> winnings, int count, double expect) {
+            WinningInformation winningInformation = new WinningInformation(winnings);
 
-            BigDecimal actual = winningStatus.getYield();
+            double actual = winningInformation.getYield(count);
 
             Assertions.assertThat(actual).isEqualTo(expect);
         }
